[MOCK_SERVER] mock serve fot the retina web

--- a/MockData/RawMaterials/config.json
+++ b/MockData/RawMaterials/config.json
@@ -2,5 +2,7 @@
   "patients": 100,
   "records": 85,
   "photos": 150,
-  "maxDrForOneSite": 8
+  "maxDrForOneOrg": 8,
+  "maxOrgForOneOrg": 8,
+  "maxAdminCount": 3 
 }
