[MOCK_SEVER] GOGOGO

--- a/MockData/RawMaterials/config.json
+++ b/MockData/RawMaterials/config.json
@@ -8,5 +8,7 @@
   "maxOrgForOneOrg": 8,
   "maxAdminCount": 3,
   "maxRecordsForOnePatient": 7,
-  "maxPhotosForOneRecord": 7
+  "maxPhotosForOneRecord": 7,
+  "maxPatientCreatedByOneDoctor": 5,
+  "maxPatientForOneOrg": 11
 }
