--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
       "MockData/*.json"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "@fast-csv/format": "^4.3.1",
+    "@fast-csv/parse": "^4.3.2",
+    "fast-csv": "^4.3.2"
+  }
 }
