--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "dependencies": {
     "@fast-csv/format": "^4.3.1",
     "@fast-csv/parse": "^4.3.2",
-    "fast-csv": "^4.3.2"
+    "@types/node-fetch": "^2.5.7",
+    "fast-csv": "^4.3.2",
+    "node-fetch": "^2.6.1",
+    "xmlhttprequest": "^1.8.0"
   }
 }
